tests/error/private_global.gw
// [contains] must declare private variables at class scope
private int i;
